# MandelbrotFractal

./: .gitignore  Cargo.toml
src/: cli.rs  gradient.rs  image.rs  image_size.rs  main.rs  mandelbrot.rs  rect.rs
tests/: parse_tests.rs
