[package]
name = "rsa_course_project"
version = "0.1.0"
authors = ["nzaharov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
num = "0.4.0"
image = "0.24.1"
palette = "0.6.0"
log = "0.4.8"
simple_logger = "4.0.0"
rayon = "1.5.3"
